# Blog-App

./: .gitignore  LICENSE  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/api/: alembic.ini  main.py  start.sh
api/api/alembic/: env.py
api/api/core/: config.py
api/api/db/: session.py
api/api/tests/: test_api.py
nginx/: nginx.conf  nginx.dockerfile
